# end_to_end_mlops_pr

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  setup.py
docs/: Makefile  conf.py  make.bat
notebooks/: exp1.ipynb  exp2.ipynb  exp3.py  exp4.py
