[project]
name = "end-to-end-mlops-pr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookiecutter>=2.6.0",
    "dagshub>=0.6.5",
    "mlflow>=3.8.1",
    "nltk>=3.9.2",
    "revised-stopwords>=0.1.4",
    "scipy>=1.15.3",
    "setuptools>=80.10.2",
    "tensorflow>=2.20.0",
    "tensorflow-keras>=0.1",
    "xgboost>=3.1.3",
]
